--- a/src/tienda/templates/compras.html
+++ b/src/tienda/templates/compras.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    {% load intdot %}
 
     <div class="page-title">
         <div class="title_left">
@@ -37,9 +38,9 @@
                                     <th>Ruc</th>
                                     <th>Proveedor</th>
                                     <th>Descripción</th>
-                                    <th>GRAVADAS 10%</th>
+                                    <th>Gravadas 10%</th>
                                     <th>IVA 10%</th>
-                                    <th>GRAVADAS 5%</th>
+                                    <th>Gravadas 5%</th>
                                     <th>IVA 5%</th>
                                     <th>Excentas</th>
                                     <th>Total IVA</th>
@@ -52,20 +53,17 @@
                             {% for compra in compras     %}
                                 <tr>
                                     <td>{{ compra.fecha }}</td>
-
                                     <td>{{ compra.nro_factura }}</td>
-
                                     <td>{{ compra.ruc_proveedor }}</td>
                                     <td>{{ compra.proveedor }}</td>
                                     <td>{{ compra.descripcion }}</td>
-
-                                    <td>{{ compra.total_grav_10 }}</td>
-                                    <td>{{ compra.total_iva_10 }}</td>
-                                    <td>{{ compra.total_grav_5 }}</td>
-                                    <td>{{ compra.total_iva_5 }}</td>
-                                    <td>{{ compra.total_grav_exentas }}</td>
-                                    <td>{{ compra.total_iva }}</td>
-                                    <td>{{ compra.monto_total }}</td>
+                                    <td>{{ compra.total_grav_10| intdot }} ₲</td>
+                                    <td>{{ compra.total_iva_10| intdot }} ₲</td>
+                                    <td>{{ compra.total_grav_5| intdot }} ₲</td>
+                                    <td>{{ compra.total_iva_5| intdot }} ₲</td>
+                                    <td>{{ compra.total_grav_exentas| intdot }} ₲</td>
+                                    <td>{{ compra.total_iva| intdot }} ₲</td>
+                                    <td>{{ compra.monto_total| intdot }} ₲</td>
 
 {#                                    <td><a class="btn btn-info btn-xs" href="/tienda/compras/{{ compra.id }}/update">Editar </a>#}
 {#                                        <a button class="btn btn-danger btn-xs" data-toggle="modal"#}
