--- a/src/tienda/templates/operacion_caja-form.html
+++ b/src/tienda/templates/operacion_caja-form.html
@@ -5,6 +5,10 @@
             <h3>NUEVA OPERACIÓN</h3>
         </div>
     </div>
+<body>
+
+  </body>
+
     <div class="clearfix"></div>
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
@@ -42,10 +46,15 @@
                 radioClass: 'iradio_flat-green'
             });
         }
+
         $(document).ready(function () {
 
             configurarICheck($("[name=tipo_transaccion]"));
         })
+
+
+
+
     </script>
 {% endblock %}
 
