--- a/src/reportes/templates/balance.html
+++ b/src/reportes/templates/balance.html
@@ -29,15 +29,15 @@
                         <div class="row tile_count">
                             <div class="col-md-4 col-sm-4 col-xs-4 tile_stats_count text-center">
                                 <h4 class="count_top"><i class="glyphicon glyphicon-arrow-up"></i> Ingreso</h4>
-                                <div class="count">{{ ingreso | intdot }} G</div>
+                                <div class="count">{{ ingreso | intdot }} ₲</div>
                             </div>
                             <div class="col-md-4 col-sm-4 col-xs-4 tile_stats_count text-center">
                                 <h4 class="count_top"><i class="glyphicon glyphicon-arrow-down"></i> Egreso</h4>
-                                <div class="count">{{ egreso | intdot }} G</div>
+                                <div class="count">{{ egreso | intdot }} ₲</div>
                             </div>
                             <div class="col-md-4 col-sm-4 col-xs-4 tile_stats_count text-center">
                                 <h4 class="count_top"><i class="fa fa-line-chart"></i> Ganancia</h4>
-                                <div class="count">{{ ganancia | intdot }} G</div>
+                                <div class="count">{{ ganancia | intdot }} ₲</div>
                             </div>
                         </div>
                         <div id="chart-container">
@@ -53,7 +53,7 @@
                             {% for resultado in resultados %}
                             <tr class="data">
                                 <td>{{ resultado.fecha }}</td>
-                                <td>{{ resultado.monto | intdot }}</td>
+                                <td>{{ resultado.monto | intdot }} ₲</td>
                                 <td>{{ resultado.tipo_transaccion }}</td>
                             </tr>
                             {% endfor %}
