--- a/src/tienda/templates/venta-detalle.html
+++ b/src/tienda/templates/venta-detalle.html
@@ -191,7 +191,7 @@
                             {{ detalle.producto.nombre | truncatechars:9  }}
                             {% endif %}
                         </td>
-                        <td class="text-right">{{ detalle.precio | intdot }} G
+                        <td class="text-right">{{ detalle.precio | intdot }} ₲
                             &nbsp;</td>
                         <td class="text-right">
                             {% if detalle.monto_10 > 0 %}
@@ -200,20 +200,20 @@
                                 {{ detalle.monto_5 | intdot}}
                             {% else %}
                                 {{ detalle.monto_exento | intdot }}
-                            {% endif %} G
+                            {% endif %} ₲
                         </td>
                     </tr>
                 {% endfor %}
             </table>
             <hr>
-            <span>TOTAL:</span><span class="pull-right">{{ cabecera.monto_total | intdot }} G</span><br>
-            <span>TOTAL GRAV. 5%:</span><span class="pull-right">{{ cabecera.total_grav_5 | intdot }} G</span><br>
-            <span>TOTAL GRAV. 10%:</span><span class="pull-right">{{ cabecera.total_grav_10 | intdot }} G</span><br>
-            <span>TOTAL EXE.:</span><span class="pull-right">{{ cabecera.total_grav_exentas | intdot }} G</span><br>
+            <span>TOTAL:</span><span class="pull-right">{{ cabecera.monto_total | intdot }} ₲</span><br>
+            <span>TOTAL GRAV. 5%:</span><span class="pull-right">{{ cabecera.total_grav_5 | intdot }} ₲</span><br>
+            <span>TOTAL GRAV. 10%:</span><span class="pull-right">{{ cabecera.total_grav_10 | intdot }} ₲</span><br>
+            <span>TOTAL EXE.:</span><span class="pull-right">{{ cabecera.total_grav_exentas | intdot }} ₲</span><br>
             <hr>
             <span>LIQUIDACIÓN IVA:</span><br>
-            <span>TOTAL IVA 5%:</span><span class="pull-right">{{ cabecera.total_iva_5 | intdot }} G</span><br>
-            <span>TOTAL IVA 10%:</span><span class="pull-right">{{ cabecera.total_iva_10 | intdot }} G</span><br>
+            <span>TOTAL IVA 5%:</span><span class="pull-right">{{ cabecera.total_iva_5 | intdot }} ₲</span><br>
+            <span>TOTAL IVA 10%:</span><span class="pull-right">{{ cabecera.total_iva_10 | intdot }} ₲</span><br>
             <hr>
             <span>Fecha:</span><span class="pull-right">{{ cabecera.fecha }}</span><br>
             <span>Ruc:</span><span class="pull-right">{{ cabecera.cliente.ruc_cliente }}</span><br>
