-Agrega ayuda en Index

--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -80,6 +80,9 @@
                     <ul class="nav child_menu">
                         <li><a href="/admin/auth/user/">Usuarios</a></li>
                         <li><a href="/admin/auth/group/">Roles</a></li>
+                        <li><a href="/admin/easyaudit/crudevent/">Auditoría</a></li>
+
+
                     </ul>
                 </li>
             </ul>
