--- a/src/main/templates/index.html
+++ b/src/main/templates/index.html
@@ -15,3 +15,18 @@
         </div>
     </div>
 {% endblock %}
+
+{#AYUDA#}
+{% block ayuda_titulo %}
+   <p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">¡Bienvenido al Sitio!</span></strong></span></p>
+{% endblock %}
+{% block ayuda_contenido %}
+        <br>
+        <h4 style="text-align: center;">Para empezar despliegue las opciones del men&uacute; :&nbsp;</h4>
+     <br>
+    <img src="/static/img/menus.gif" alt="menus.png" width="300" height="500" style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+
+{% endblock %}
