Agrega separación de miles en ventas
- Agrega libreria AutoNumeric (para separacion de miles)
- Arregla error en grafico de balance.

--- a/src/reportes/templates/asistencia.html
+++ b/src/reportes/templates/asistencia.html
@@ -169,7 +169,8 @@
                                 font: function(context) {
                                     var w = context.chart.width;
                                     return {
-                                        size: w < 512 ? 12 : 14
+                                        size: w < 512 ? 12 : 14,
+                                        weight: 500
                                     }
                                 },
                                 formatter: function(value, context) {
