--- a/src/main/templates/main/empleados-form.html
+++ b/src/main/templates/main/empleados-form.html
@@ -46,6 +46,7 @@
         $(document).ready(function () {
             configurarICheck($("[name=sexo]"));
             configurarICheck($("[name=estado]"));
+            useAutonumericCurrency('#id_salario');
         })
     </script>
 {% endblock %}
