--- a/src/main/templates/main/profesores-form.html
+++ b/src/main/templates/main/profesores-form.html
@@ -44,7 +44,7 @@
         }
         $(document).ready(function () {
             configurarICheck($("[name=sexo]"));
-
+            useAutonumericCurrency('#id_salario');
         })
     </script>
 {% endblock %}
