--- a/src/tienda/templates/operacion_caja-form.html
+++ b/src/tienda/templates/operacion_caja-form.html
@@ -48,8 +48,8 @@
         }
 
         $(document).ready(function () {
-
             configurarICheck($("[name=tipo_transaccion]"));
+            useAutonumericCurrency('#id_monto');
         })
 
 
