--- a/src/tienda/templates/producto-form.html
+++ b/src/tienda/templates/producto-form.html
@@ -46,7 +46,8 @@
             configurarICheck($("[name=iva]"));
             configurarICheck($("[name=estado]"));
             configurarICheck($("[name=control_stock]"));
-
+            useAutonumericCurrency('#id_precio_venta');
+            useAutonumericCurrency('#id_costo');
         });
 
 
