-Agrega ayuda en Inscripción

--- a/src/escuela/templates/inscripciones-form.html
+++ b/src/escuela/templates/inscripciones-form.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="page-title">
         <div class="title_left">
-            <h3>Nueva Inscripcion</h3>
+            <h3>Nueva Inscripción</h3>
         </div>
     </div>
     <div class="clearfix"></div>
@@ -146,21 +146,33 @@
 <p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Proceso de Inscripci&oacute;n</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-        <p style="text-align: center;">Para llevar a cabo una inscripci&oacute;n es necesario que se encuentre creado un <strong>Grupo de Clases</strong>  y &eacute;stos tengan cupos disponibles. Siga los siguientes pasos:&nbsp;</p>
-            <p style="text-align: center;">&nbsp;</p>
 
-        <p><span style="color: #003366;"><strong>Paso 1. Agregar Titular : Puede elegir de la lista , o bien crear uno nuevo.</strong></span></p>
+    <h4 style="text-align: center;">El proceso de Inscripción consta de los siguientes 4 pasos  :&nbsp;</h4>
+
+    <img src="/static/img/pasos.gif" alt="menus.png" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+    <br>
+    <br>
+    <br>    <p><span style="color: #003366;"><strong>Paso 1. Agregar Titular : Puede elegir de la lista , o bien crear uno nuevo.</strong></span></p>
         <p><br />&bull; <strong><em>Complete de manera obligatoria los siguientes campos:</em></strong>C&eacute;dula, Nombre y Apellido, Sexo, Direcci&oacute;n</p>
         <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong> </em>Tel&eacute;fono, Otro contacto, Fotocopia de C&eacute;dula,
             Foto, Ficha M&eacute;dica, Ficha de Inscripci&oacute;n, Estado</p>
         <p>&bull;<strong> Siguiente</strong></p>
+    <br>
+    <br>
         <p><br /><span style="color: #003366;"><strong>Paso 2. Agregar alumno :&nbsp;Puede elegir de la lista , o bien crear uno nuevo.</strong></span></p>
         <p>&bull; <em><strong>Complete de manera obligatoria los siguientes campos:</strong></em>C&eacute;dula, Nombre y Apellido, Sexo, Direcci&oacute;n, Estado</p>
         <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong></em> Tel&eacute;fono, Otro contacto, Fotocopia de C&eacute;dula, Tipo Responsable</p>
 
         <p><br><strong>Si desea agregar m&aacute;s alumnos , presione el signo&nbsp;
             <img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></br></p>
+<br>
+    <br>
+        <p><br /><span style="color: #003366;"><strong>Paso 3. Agregar Grupo :&nbsp;Puede elegir de la lista, la misma debe estar creada y contar con cupos disponibles</strong></span></p>
 
-        <p><br /><span style="color: #003366;"><strong>Paso 3. Agregar Grupo :&nbsp;Puede elegir de la lista, la misma debe estar creada.</strong></span></p>
+    <br>
+    <br>
         <p><br /><span style="color: #003366;"><strong>Paso 4. Agregar Alumno :&nbsp;Al guardar el registro, se genera la deuda.</strong></span></p>
 {% endblock %}
