- Alter field estado on persona

--- a/src/escuela/templates/inscripciones-form.html
+++ b/src/escuela/templates/inscripciones-form.html
@@ -153,9 +153,11 @@
     margin-left: auto;
     margin-right: auto;
    "/>
+
     <br>
+<br>
     <br>
-    <br>    <p><span style="color: #003366;"><strong>Paso 1. Agregar Titular : Puede elegir de la lista , o bien crear uno nuevo.</strong></span></p>
+        <p><span style="color: #003366;"><strong>Paso 1. Agregar Titular : Puede elegir de la lista , o bien crear uno nuevo.</strong></span></p>
         <p><br />&bull; <strong><em>Complete de manera obligatoria los siguientes campos:</em></strong>C&eacute;dula, Nombre y Apellido, Sexo, Direcci&oacute;n</p>
         <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong> </em>Tel&eacute;fono, Otro contacto, Fotocopia de C&eacute;dula,
             Foto, Ficha M&eacute;dica, Ficha de Inscripci&oacute;n, Estado</p>
@@ -168,11 +170,8 @@
 
         <p><br><strong>Si desea agregar m&aacute;s alumnos , presione el signo&nbsp;
             <img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></br></p>
-<br>
-    <br>
+<br><br>
         <p><br /><span style="color: #003366;"><strong>Paso 3. Agregar Grupo :&nbsp;Puede elegir de la lista, la misma debe estar creada y contar con cupos disponibles</strong></span></p>
-
-    <br>
-    <br>
-        <p><br /><span style="color: #003366;"><strong>Paso 4. Agregar Alumno :&nbsp;Al guardar el registro, se genera la deuda.</strong></span></p>
+       <br><br>
+    <p><br /><span style="color: #003366;"><strong>Paso 4. Agregar Alumno :&nbsp;Al guardar el registro, se genera la deuda.</strong></span></p>
 {% endblock %}
