--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -59,20 +59,21 @@
                     Finanzas
                     <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/tienda/caja">Caja chica</a></li>
-                        <li><a href="/tienda/compras">Egresos</a></li>
+                        <li><a href="/tienda/caja">Caja</a></li>
+                        <li><a href="/tienda/ventas">Ventas por Día</a></li>
+                        <li><a href="/tienda/compras">Egresos por Día</a></li>
+                        <li><a href="/tienda/">Balance por Día</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/reportes_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Reportes <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="#">Total ingresos</a></li>
-                        <li><a href="#">Total egresos</a></li>
-                        <li><a href="#">Total ganancias</a></li>
-                        <li><a href="#">Total alumnos</a></li>
-                        <li><a href="#">Cuotas por vencer</a></li>
-                        <li><a href="/reportes/asistencia">Asistencias </a></li>
-                        <li><a href="/reportes/balance">Balance</a></li>
+                        <li><a href="#">Alumnos por Grupo</a></li>
+                        <li><a href="#">Estado de cuenta por Titular</a></li>
+                        <li><a href="/reportes/asistencia">Asistencia Mensual </a></li>
+                        <li><a href="/reportes/balance">Balance Mensual</a></li>
+                        <li><a href="/reportes/balance">IVA Ventas</a></li>
+                        <li><a href="/reportes/balance">IVA Compras</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/ajustes_blanco.png" width="25px" style="margin: 0.3em 0.6em 0.6em 0.6em">
