--- a/src/reportes/templates/asistencia.html
+++ b/src/reportes/templates/asistencia.html
@@ -18,7 +18,7 @@
             <div class="x_panel">
                 <div class="x_content">
                         <form method="GET" action="/reportes/asistencia" class="form form-inline hidden-print">
-                            <label for="fecha">Fecha: </label>
+                            <label for="fecha">Mes/Año: </label>
                             <input id="fecha" style="margin-bottom: 0.37em;margin-right: 0.5em;" name="mes"
                                    class="form-control" type="text" required value="{{ mes }}">
                             <label for="grupo">Grupo: </label>
