--- a/src/reportes/templates/balance.html
+++ b/src/reportes/templates/balance.html
@@ -18,7 +18,7 @@
             <div class="x_panel">
                 <div class="x_content">
                         <form method="GET" action="/reportes/balance" class="form form-inline hidden-print">
-                            <label for="fecha">Fecha: </label>
+                            <label for="fecha">Mes/Año </label>
                             <input id="fecha" style="margin-bottom: 0.37em;margin-right: 0.5em;" name="mes" class="form-control" type="text" required value="{{ mes }}">
                             <label for="ver" class="btn btn-primary"><i class="fa fa-search"></i> Ver</label>
                             <input id="ver" type="submit" name="action" class="hidden" value="Ver">
