--- a/src/tienda/templates/ventas-form.html
+++ b/src/tienda/templates/ventas-form.html
@@ -62,7 +62,7 @@
                         <div class="form-group">
                             <div class="col-md-12 text-center">
                                 <a class="btn btn-primary" type="button" href="/">Cancelar</a>
-                                <a type="button" class="btn btn-success" data-toggle="modal" data-target="#pago">Pagar</a>
+                                <a type="button" class="btn btn-success" onclick="logicaPago()" data-toggle="modal" data-target="#pago">Pagar</a>
                             </div>
                         </div>
                         <!--    MODAL PAGO                    -->
