--- a/src/tienda/templates/pago-form.html
+++ b/src/tienda/templates/pago-form.html
@@ -8,47 +8,80 @@
 {#</div>#}
 
 <div class="row" class="x_content" >
-    <div class="form-group col-md-4 col-sm-4 col-xs-12" >
+    <div class="form-group col-md-6 col-sm-6 col-xs-12" >
 
 
         {% include "forms/label.html" with field=form.monto %}
         {% include "forms/charfield.html" with field=form.monto %}
         {% include "forms/field-errors.html" with field=form.monto %}
 
+        <div class="feedback-message">
+            <span id='monto-cero-pago' class="text-danger" style="display:none">Monto Total es 0, verifique los detalles.</span>
+        </div>
+    </div>
+    <div class="form-group col-md-6 col-sm-6 col-xs-12" >
 
+
+        <label class="control-label" for="monto-restante">Monto Restante</label>
+        <input class="form-control" id="monto-restante" type="text" readonly>
+
+        <div class="feedback-message">
+
+            <span id='mayor-a-total-pago' class="text-danger" style="display:none">Monto abonado es mayor al total.</span>
+        </div>
     </div>
 </div>
 <div  class="row form-horizontal">
-{{ form.metodo_pago.as_hidden }}
-
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a onclick="setMetodoPago('Efectivo')" href="#efectivo" aria-controls="efectivo" role="tab"
-                                                  data-toggle="tab">EFECTIVO</a></li>
-        <li role="presentation"><a onclick="setMetodoPago('Tarjeta')" href="#tarjeta" aria-controls="tarjeta" role="tab" data-toggle="tab">TARJETA</a></li>
-        <li role="presentation"><a onclick="setMetodoPago('Cheque')" href="#cheque" aria-controls="cheque" role="tab" data-toggle="tab">CHEQUE</a></li>
+        <li role="presentation" class="active"><a href="#efectivo" aria-controls="efectivo" role="tab"
+                                                  data-toggle="tab">{{ form.pago_efectivo }} EFECTIVO</a></li>
+        <li role="presentation"><a href="#tarjeta" aria-controls="tarjeta" role="tab" data-toggle="tab">{{ form.pago_tarjeta }} TARJETA</a></li>
+        <li role="presentation"><a href="#cheque" aria-controls="cheque" role="tab" data-toggle="tab">{{ form.pago_cheque }} CHEQUE</a></li>
 
     </ul>
-
+    <div class="feedback-message col-xs-12">
+        <span id='no-medio-pago' class="text-danger" style="display:none">Elija al menos un medio de pago.</span>
+    </div>
 
     <div class="tab-content">
+
+        <!-- EFECTIVO -->
         <div role="tabpanel" class="tab-pane active" id="efectivo"><br>
             <div class="form-group col-md-12 col-sm-12 col-xs-12">
-                <label class="control-label">Monto Abonado</label>
-                <input class="form-control input-lg" onkeyup="calculaVuelto()" type="number" id="abonado"/>
+                <label class="control-label" for="{{ form.monto_efectivo.id_for_label }}">Monto Efectivo</label>
+                <input class="form-control" type="text"
+                       id="{{ form.monto_efectivo.id_for_label }}"
+                       name="{{ form.monto_efectivo.html_name }}" readonly>
+            </div>
+            <div class="form-group col-md-12 col-sm-12 col-xs-12">
+                <label class="control-label" for="{{ form.monto_efectivo_abonado.id_for_label }}">Monto Abonado</label>
+                <input class="form-control" onkeyup="calculaVuelto()" type="text"
+                       id="{{ form.monto_efectivo_abonado.id_for_label }}"
+                       name="{{ form.monto_efectivo_abonado.html_name }}">
+
                 <div class="feedback-message">
 
                     <span id='vueltonegativo' class="text-danger" style="display:none">Monto abonado es menor al total.</span>
                 </div>
             </div>
             <div class="form-group col-md-12 col-sm-12 col-xs-12">
-                <label class="control-label">Vuelto</label>
-                <input class="form-control input-lg" type="number" id="vuelto" readonly/>
+                <label class="control-label" for="{{ form.monto_efectivo_vuelto.id_for_label }}">Vuelto</label>
+                <input class="form-control" type="text" id="{{ form.monto_efectivo_vuelto.id_for_label }}"
+                       name="{{ form.monto_efectivo_vuelto.html_name }}" readonly>
             </div>
 
         </div>
 
-        <div role="tabpanel" class="tab-pane" id="tarjeta">
+        <!-- TARJETA -->
+        <div role="tabpanel" class="tab-pane" id="tarjeta"><br>
+            <div class="form-group col-md-12 col-sm-12 col-xs-12">
+                <label class="control-label" for="{{ form.monto_tarjeta.id_for_label }}">Monto Tarjeta</label>
+                <input class="form-control" type="text"
+                       id="{{ form.monto_tarjeta.id_for_label }}"
+                       name="{{ form.monto_tarjeta.html_name }}" readonly>
+
+            </div>
             <div class="form-group col-md-4 col-sm-4 col-xs-12">
 
                 {% include "forms/label.html" with field=form.tarjeta %}
@@ -76,8 +109,17 @@
             </div>
 
         </div>
-        <div role="tabpanel" class="tab-pane" id="cheque">
 
+        <!-- CHEQUE -->
+        <div role="tabpanel" class="tab-pane" id="cheque"><br>
+
+            <div class="form-group col-md-12 col-sm-12 col-xs-12">
+                <label class="control-label" for="{{ form.monto_cheque.id_for_label }}">Monto Cheque</label>
+                <input class="form-control" type="text"
+                       id="{{ form.monto_cheque.id_for_label }}"
+                       name="{{ form.monto_cheque.html_name }}" readonly>
+
+            </div>
             <div class="form-group col-md-4 col-sm-4 col-xs-12">
                 {% include "forms/label.html" with field=form.banco %}
                 {% include "forms/charfield.html" with field=form.banco %}
