--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -46,8 +46,8 @@
                     Ventas <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href="/tienda/ventas/new">Vender</a></li>
-                        <li><a href="/tienda/ventas">Ventas realizadas</a></li>
-                        <li><a href="/tienda/ventas">Ventas canceladas</a></li>
+
+                        <li><a href="/">Ventas canceladas</a></li>
                         <li><a href="/escuela/cuentas">Cuentas a cobrar</a></li>
                         <li><a href="/tienda/clientes">Clientes</a></li>
                         <li><a href="/tienda/productos">Productos</a></li>
@@ -59,9 +59,11 @@
                     Finanzas
                     <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/tienda/caja">Caja</a></li>
+                        <li><a href="/tienda/caja">Caja Chica</a></li>
+                        <li><a href="/tienda/compras">Compras por Día</a></li>
                         <li><a href="/tienda/ventas">Ventas por Día</a></li>
-                        <li><a href="/tienda/compras">Egresos por Día</a></li>
+
+
                         <li><a href="/tienda/">Balance por Día</a></li>
                     </ul>
                 </li>
@@ -72,8 +74,8 @@
                         <li><a href="#">Estado de cuenta por Titular</a></li>
                         <li><a href="/reportes/asistencia">Asistencia Mensual </a></li>
                         <li><a href="/reportes/balance">Balance Mensual</a></li>
-                        <li><a href="/reportes/balance">IVA Ventas</a></li>
-                        <li><a href="/reportes/balance">IVA Compras</a></li>
+                        <li><a href="/">Libro Compra</a></li>
+                        <li><a href="/">Libro Venta</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/ajustes_blanco.png" width="25px" style="margin: 0.3em 0.6em 0.6em 0.6em">
