--- a/src/tienda/templates/operacion_caja.html
+++ b/src/tienda/templates/operacion_caja.html
@@ -2,35 +2,38 @@
 {% block content %}
 {% load intdot %}
     <div class="page-title">
-        <div class="title_left">
-            <h3>OPERACIONES EN CAJA</h3>
 
-        </div>
-        <div class="title_right">
-            <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
+
+    <div style="font-size: 30px;
+                     font-weight: bold;
+                     color: #2A3F54;
+                       text-align: center;">
+                         Total en Caja chica: {{ total | intdot }} ₲
+
+    </div>
+        <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
 
                     <a class="btn btn-primary pull-right" href="/tienda/caja/new"><i  class="fa fa-plus-square"></i> NUEVA OPERACIÓN</a>
-
-                </div>
             </div>
 
     </div>
+
     <div class="clearfix"></div>
 
     <div class="row">
 
         <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="x_panel">
-                <div class="x_content">
-
-
                     <div class="x_content">
-                    Operaciones Caja: {{ total | intdot }} ₲
                         <form method="GET" action="/tienda/caja"  class="form form-inline hidden-print">
                             <label for="fecha">Fecha</label>
-                            <input class="form-control" type="text" value="{{ fecha }}" name="fecha" data-inputmask="'mask': '99/99/9999'">
+                            <input class="form-control" type="text" value="{{ fecha }}" name="fecha" data-inputmask="'mask': '99/99/9999'" &nbsp>
+
                             <input class="btn btn-primary" type="submit" value="Ver">
+
+                            <br>
                         </form>
+                    <br>
                         <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap"
                                cellspacing="0"
                                width="100%">
@@ -72,7 +75,7 @@
                 </div>
             </div>
         </div>
-    </div>
+
 
     <!-- eliminar modal -->
     <div id="eliminar-modal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-hidden="true">
