--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -74,8 +74,8 @@
                         <li><a href="#">Estado de cuenta por Titular</a></li>
                         <li><a href="/reportes/asistencia">Asistencia Mensual </a></li>
                         <li><a href="/reportes/balance">Balance Mensual</a></li>
-                        <li><a href="/">Libro Compra</a></li>
-                        <li><a href="/">Libro Venta</a></li>
+                        <li><a href="/reportes/compra">Libro Compra</a></li>
+                        <li><a href="/reportes/venta">Libro Venta</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/ajustes_blanco.png" width="25px" style="margin: 0.3em 0.6em 0.6em 0.6em">
